<resources>
    <string name="app_name">GPA_ferrnw_Calculator</string>
    <string name="input_label1">Grade 1</string>
    <string name="input_label2">Grade 2</string>
    <string name="input_label3">Grade 3</string>
    <string name="input_label4">Grade 4</string>
    <string name="input_label5">Grade 5</string>
    <string name="btn_text1">Compute GPA</string>
    <string name="btn_text2">Clear</string>
    <string name="result_text">Calculated GPA:</string>
</resources>
